# ott-taxonomy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: build_ott_taxonomy.py  load_networkx_graph.py  load_ott_taxonomy.py
ott_taxonomy/: __init__.py  __version__.py  dataset.py
ott_taxonomy/exceptions/: __init__.py  unavailable_entry.py  version_exception.py
ott_taxonomy/settings/: __init__.py  dataset_settings.py
ott_taxonomy/settings/versions/: ott2.10.json  ott2.6.json  ott2.7.json  ott2.8.json  ott2.9.json  ott3.0.json  ott3.1.json  ott3.2.json  ott3.3.json  ott3.4.json  ott3.5.json  ott3.6.json
ott_taxonomy/utils/: __init__.py
