[project]
name = "ott-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache-decorator>=2.2.0",
    "compress-json>=1.1.0",
    "dict-hash>=1.3.4",
    "downloaders>=1.0.21",
    "networkx>=3.4.1",
    "pip>=24.2",
    "setuptools>=75.2.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-readme", "validate_version_code"]
